# VTE

./: .gitignore  CODEOWNERS  Gaps and Mistakes.md  Per Page Content Structure.md  README.md  RELEASE_NOTES.md  audit_report.html  check_ports.py  deploy_agents.ps1  docker-compose.yml  package-lock.json  package.json  run_local_e2e.ps1  seed.py  seed_filters.py  seed_pagination.py  seed_search.py  test_utils.py  validate_local_stack.py  verification_plan.md  verify_all_gaps.py  verify_auth.py  verify_breadcrumbs.py  verify_bulk_actions.py  verify_density.py  verify_empty_state_playwright.py  verify_error_state.py  verify_favorites.py  verify_filtering.py  verify_gh_headless.py  verify_loading.py  verify_mfa.py  verify_mobile.py  verify_oidc.py  verify_pagination.py  verify_search.py  verify_sessions.py  verify_sorting.py  walkthrough_phase06.md
apps/backend-core/: fix_dates.py  pyproject.toml
apps/backend-core/spine/: main.py  seed_admin.py
apps/backend-core/spine/api/: deps.py
apps/backend-core/spine/core/: concurrency.py  loader.py  security.py
apps/backend-core/spine/db/: engine.py  init_db.py  models.py
apps/backend-core/spine/migrations/: env.py
apps/backend-core/spine/ops/: audit.py  backup.py  logger.py  timeline.py
spine/: Dockerfile  alembic.ini  client_secret.json  playwright_test.py  pyproject.toml  render.yaml
spine/app/core/state_machine/: engine.py
spine/app/ops/: backlog_controller.py
spine/migrations/: 0001_core_extensions.sql  0002_proof_spine_tables.sql  0005_proof_chain_link.sql  env.py
spine/migrations/versions/: 015cc30d9958_add_proposed_to_outcomeenum.py  8e58b21da540_initial_schema.py  9f8825c0bb8c_add_usersession_table.py
spine/registry/: pipe.schema.registry.json  tenant-isolation.guard.ts
spine/scripts/: create_tables.py  verify_backend_e2e.py
spine/tests/: manual_decision.py  manual_health_check.py  test_action_execution.py  test_auth_google.py  test_connect_flow.py  test_governance_flow.py  test_ingestion_automation.py  test_inventory_decision.py  test_wiring.py
spine/vte/: db.py  main.py  orm.py  tasks.py  worker.py
spine/vte/adapters/appfolio/: client.py
spine/vte/adapters/gmail/: poller.py
spine/vte/adapters/google/: client.py
spine/vte/agents/: auditor.py  ingest.py  ingestion.py
spine/vte/api/: auth.py  deps.py  inventory.py  oidc.py  routes.py  schema.py
spine/vte/core/: agent.py  engine.py  integrity_verifier.py  permits.py  policy.py  security.py
spine/vte/orchestrators/: kevins_work_day.py
ump_v2/: .importlinter  pyproject.toml
ump_v2/apps/web/components/: decision_trace_viewer.tsx  workqueue_dashboard.tsx
ump_v2/apps/web_ui/: .env.example  package-lock.json  package.json  vercel.json  vite.config.ts
ump_v2/apps/web_ui/src/: App.tsx  main.tsx
ump_v2/apps/web_ui_backup/: vite.config.ts
ump_v2/apps/web_ui_backup/src/: App.tsx  index.css
ump_v2/chapters/eyes/src/: adapter_contract.py  appfolio_scraper.py  gmail_adapter.py
ump_v2/contracts/auth/: mfa_challenge_v1.json  mfa_verify_v1.json  signin_policy_v1.json  signup_policy_v1.json
ump_v2/environments/: canary_deployment.yaml
ump_v2/foundation/tests/: test_correlation_guard.py  test_prompt_registry.py  test_redaction_engine.py
ump_v2/schemas/: compile.py
ump_v2/schemas/definitions/: identity.py
ump_v2/security_package/: gdpr_dsar_policy.md
ump_v2/spine/: Dockerfile  docker-compose.yml  extract_reqs.py  master_audit_plan.md
ump_v2/spine/db/: database.py  models.py
ump_v2/spine/migrations/: env.py
ump_v2/spine/src/: main.py
ump_v2/spine/tests/: debug.py  test_e2e.py  test_live_integration.py
(+952 files in other folders)
