[tool.poetry]
name = "vte-ump-system"
version = "0.1.0"
description = "Canonical UMP System for VTE"
authors = ["Start <start@nerdyfox.co>"]
readme = "README.md"
packages = [
    { include = "foundation" },
    { include = "spine" },
    { include = "chapters" }
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = {extras = ["email"], version = "^2.12.5"}
sqlalchemy = "^2.0.46"
pyotp = "^2.9.0"
asyncpg = "^0.31.0"
psycopg2-binary = "^2.9.11"
alembic = "^1.18.4"
python-dotenv = "^1.2.1"
playwright = "^1.58.0"
twilio = "^9.10.2"
sendgrid = "^6.12.5"
stripe = "^14.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "import-linter (>=2.10,<3.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "uvicorn (>=0.41.0,<0.42.0)"
]
